--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -24574,7 +24574,7 @@ msgstr ""
 msgid "You are registered in the training %s since the %s"
 msgstr ""
 
-msgid "You are receiving this message because you have completed a learning path with a %s% progress of your training.<br/>Your progress must be 100 to consider that your training was carried out.<br/>If you have the slightest problem, you should contact with your trainer."
+msgid "You are receiving this message because you have completed a learning path with a %s%% progress of your training.<br/>Your progress must be 100 to consider that your training was carried out.<br/>If you have the slightest problem, you should contact with your trainer."
 msgstr ""
 
 msgid "As a reminder, to access the training platform:<br/>1. Connect to the platform at the address: %s <br/>2. Then enter: <br/>Your username: %s <br/>Your password: This was emailed to you.<br/>if you forgot it and can't find it, you can retrieve it by going to %s <br/><br/>Thank you for doing what is necessary."
@@ -28576,4 +28576,31 @@ msgid "External tool deleted"
 msgstr ""
 
 msgid "You passed the time limit to see the results"
+msgstr ""
+
+msgid "You're not allowed in this course"
+msgstr ""
+
+msgid "Group not found"
+msgstr ""
+
+msgid "Session not found"
+msgstr ""
+
+msgid "You're not allowed in this session"
+msgstr ""
+
+msgid "Course does not exist"
+msgstr ""
+
+msgid "The security code entered was incorrect."
+msgstr ""
+
+msgid "Security check"
+msgstr ""
+
+msgid "New instance of recurring session created"
+msgstr ""
+
+msgid "A new instance of the recurring session <em>%s</em> has been created. Please review the details: %s"
 msgstr ""
