--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -56,7 +56,7 @@
     "Administration": "Administration",
     "Remember me": "Remember me",
     "Register oneself": "Register oneself",
-    "Share with User": "Share with User",
+    "Share with user": "Share with user",
     "Course": "Course",
     "Session": "Session",
     "Group": "Group",
@@ -84,6 +84,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Tools",
     "Loading": "Loading",
+    "Loading...": "Loading...",
     "Course language": "Course language",
     "Department": "Department",
     "Department URL": "Department URL",
@@ -630,5 +631,9 @@
     "You are about to start using one of the best Open Source e-learning platforms on the market. Like many other Open Source projects, Chamilo is backed up by a large community of students, teachers, developers, content creators and businesses who would like to promote the project better.": "You are about to start using one of the best Open Source e-learning platforms on the market. Like many other Open Source projects, Chamilo is backed up by a large community of students, teachers, developers, content creators and businesses who would like to promote the project better.",
     "By knowing a little bit more about you, a platform administrator, one of the most important user type for us, who will manage this e-learning system, we will be able to let people know, statistically, how our software is used while respecting your privacy. We will also be able to let you know when we organize events that might be relevant to you or offer additional services that might be of value to your organisation.": "By knowing a little bit more about you, a platform administrator, one of the most important user type for us, who will manage this e-learning system, we will be able to let people know, statistically, how our software is used while respecting your privacy. We will also be able to let you know when we organize events that might be relevant to you or offer additional services that might be of value to your organisation.",
     "By filling this form, you agree that the editor of Chamilo, the %s company, registered in Belgium, and\/or members of its network of partners (exclusively Chamilo services providers) might occasionally send you information by e-mail about important events or updates in the Chamilo software or community. This will help the community grow as an organized entity where information flows, with a thorough respect of your time and your privacy.": "By filling this form, you agree that the editor of Chamilo, the {0} company, registered in Belgium, and\/or members of its network of partners (exclusively Chamilo services providers) might occasionally send you information by e-mail about important events or updates in the Chamilo software or community. This will help the community grow as an organized entity where information flows, with a thorough respect of your time and your privacy.",
-    "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next.": "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next."
+    "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next.": "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next.",
+    "Label": "Label",
+    "Multilingual": "Multilingual",
+    "Subscribing...": "Subscribing...",
+    "Error message": "Error message"
 }
