--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28619,3 +28619,36 @@ msgstr ""
 
 msgid "Client"
 msgstr "Client"
+
+msgid "Hide advanced settings"
+msgstr ""
+
+msgid "Show advanced settings"
+msgstr ""
+
+msgid "Are you sure you want to delete this item?"
+msgstr ""
+
+msgid "No available options"
+msgstr ""
+
+msgid "Cc"
+msgstr ""
+
+msgid "Send"
+msgstr ""
+
+msgid "Draft"
+msgstr ""
+
+msgid "Share with User"
+msgstr ""
+
+msgid "Multilingual"
+msgstr ""
+
+msgid "Loading..."
+msgstr ""
+
+msgid "Subscribing..."
+msgstr ""
