Language: Add missing and fix language terms

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -635,5 +635,55 @@
     "Label": "Label",
     "Multilingual": "Multilingual",
     "Subscribing...": "Subscribing...",
+    "No description": "No description",
+    "Repeat date": "Repeat date",
+    "Repeat type": "Repeat type",
+    "Repeat end date": "Repeat end date",
+    "Duration (minutes)": "Duration (minutes)",
+    "Daily": "Daily",
+    "Weekly": "Weekly",
+    "Bi-weekly": "Bi-weekly",
+    "Monthly, by date": "Monthly, by date",
+    "Every X days": "Every X days",
+    "Gradebook options": "Gradebook options",
+    "Qualify attendance gradebook": "Qualify attendance gradebook",
+    "Select gradebook option": "Select gradebook option",
+    "Gradebook column title": "Gradebook column title",
+    "Grade weight": "Grade weight",
+    "No invitations or records found": "No invitation or record found",
+    "Accept invitation": "Accept invitation",
+    "Reject invitation": "Reject invitation",
+    "Friend added successfully": "Friend added successfully",
+    "Friend request rejected": "Friend request rejected",
+    "We could not retrieve the themes": "We could not retrieve the themes",
+    "Theme title": "Theme title",
+    "Required field": "Required field",
+    "A file name is required to save the recorded audio": "A file name is required to save the recorded audio",
+    "Attachment": "Attachment",
+    "We are sorry, your browser does not support using a microphone": "We are sorry, your browser does not support using a microphone",
+    "Results for": "Results for",
+    "Search groups": "Search groups",
+    "Back to Groups list": "Back to Groups list",
+    "Pending group invitations": "Pending group invitations",
+    "Delete skill profile": "Delete skill profile",
+    "Skill profile deleted": "Skill profile deleted",
+    "Skill profiles": "Skill profiles",
+    "No skill profile": "No skill profile",
+    "Original assignment": "Original assignment",
+    "Student's submission": "Student's submission",
+    "Write your comment...": "Write your comment...",
+    "Max score": "Max score",
+    "Not graded yet": "Not graded yet",
+    "Attach file (optional)": "Attach file (optional)",
+    "Please add a comment, a grade or a file": "Please add a comment, a grade or a file",
+    "Score updated successfully": "Score updated successfully",
+    "Comment added successfully": "Comment added successfully",
+    "Each file name must match: YYYY-MM-DD_HH-MM_username_originalTitle.ext": "Each file name must match: YYYY-MM-DD_HH-MM_username_originalTitle.ext",
+    "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
+    "Assignments deleted": "Assignments deleted",
+    "Failed to download package": "Failed to download package",
+    "Failed to upload corrections": "Failed to upload corrections",
+    "Edit submission": "Edit submission",
+    "Submission updated!": "Submission updated!",
     "Error message": "Error message"
 }
