--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -21358,7 +21358,7 @@ msgstr "Diagnosemanagement"
 msgid "You must first fill your profile to enable the terms and conditions validation."
 msgstr "Sie müssen zuerst Ihr Profil ausfüllen, um die Validierung der Bestimmungen und Bedingungen zu ermöglichen."
 
-msgid "Diagnostic"
+msgid "Diagnosis"
 msgstr "Diagnostik"
 
 msgid "Allow show the user Skype account"
