--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -21326,7 +21326,7 @@ msgstr "Gestión de diagnóstico"
 msgid "You must first fill your profile to enable the terms and conditions validation."
 msgstr "Debe completar su perfil para acceder a la validación del contrato."
 
-msgid "Diagnostic"
+msgid "Diagnosis"
 msgstr "Diagnóstico"
 
 msgid "Allow show the user Skype account"
