--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -21305,7 +21305,7 @@ msgstr "Gestione diagnostica"
 msgid "You must first fill your profile to enable the terms and conditions validation."
 msgstr "Per validare il contratto è necessario completare il profilo"
 
-msgid "Diagnostic"
+msgid "Diagnosis"
 msgstr "Diagnostica"
 
 msgid "Allow show the user Skype account"
