--- a/translations/messages.pt.po
+++ b/translations/messages.pt.po
@@ -21299,7 +21299,7 @@ msgstr ""
 msgid "You must first fill your profile to enable the terms and conditions validation."
 msgstr "Primeiro, você deve preencher o seu perfil para permitir a validação termos e condições."
 
-msgid "Diagnostic"
+msgid "Diagnosis"
 msgstr ""
 
 msgid "Allow show the user Skype account"
