Language: Add missing and fix language terms

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -237,8 +237,8 @@
     "Glossary term saved": "Glossary term saved",
     "Could not create glossary term": "Could not create glossary term",
     "File type": "File type",
-    "Delete all terms before import": "Delete all terms before import",
-    "Update existing terms": "Update existing terms",
+    "Delete all terms before import.": "Delete all terms before import.",
+    "Update existing terms.": "Update existing terms.",
     "Import": "Import",
     "Terms imported succesfully": "Terms imported succesfully",
     "Could not import terms": "Could not import terms",
@@ -685,5 +685,23 @@
     "Failed to upload corrections": "Failed to upload corrections",
     "Edit submission": "Edit submission",
     "Submission updated!": "Submission updated!",
+    "No assignments available": "No assignments available",
+    "Move the file": "Move the file",
+    "Please select a target assignment": "Please select a target assignment",
+    "Submission moved successfully": "Submission moved successfully",
+    "Correction uploaded successfully!": "Correction uploaded successfully!",
+    "Invalid submission": "Invalid submission",
+    "Invalid resource link ID": "Invalid resource link ID",
+    "Can not change visibility": "Can not change visibility",
+    "Visibility updated successfully!": "Visibility updated successfully!",
+    "No download available": "No download available",
+    "Are you sure you want to delete this submission?": "Are you sure you want to delete this submission?",
+    "Submission deleted successfully!": "Submission deleted successfully!",
+    "Friendly URL": "Friendly URL",
+    "Definition": "Definition",
+    "Glossary exported": "Glossary exported",
+    "Could not export glossary": "Glossary exported",
+    "Column": "Column",
+    "Blocks Palette": "Blocks Palette",
     "Error message": "Error message"
 }
